TaskForces now conquest known enemy cities
Add Continent objects and TaskForce objects; these enable transportation
of idle ground troops to planets/continets with enemy cities. Add some 
exceptions to be used for communication between high and low level AI 
components. Fix conquestGalaxy() bug: mutation of objects in Java 
Collections Sets will cause bad behaviour. From java api "The behavior 
of a set is not specified if the value of an object is changed in a 
manner that affects equals comparisons while the object is an element 
in the set." 



etc/PHOENIX/PHOENIX.INI
regency term = 100 for AI testing.

NOTICE.txt
Add log4j2

src/ai/AIException.java
An AI exception.

src/ai/AIFatalException.java
A fatal AI exception.

src/ai/AI.java
Create TaskForces to ferry idle ground troops to neighbouring 
planets/continents with enemy cities in them.

src/ai/AssetCount.java
Contains the number of assets a faction has on a continent.

src/ai/Continent.java
A single connected land mass on a planet (later, each single connected
ocean may also be represented by this object.) Contains lists of lists 
of cities/units a faction has on this continent.

src/ai/package-info.java
More docs.

src/ai/RebelAI.java
Fix docs, disable AI.

src/ai/SymbiotAI.java
Create and move TaskForces, add logging.

src/ai/TaskForce.java
At init, gets as input a target hex with an enemy city, a space 
transport, and an idle friendly stack with ground troops. Upon call of
executePlan() will then ferry ground troops to an accessible hex nearest
to target hex, until no more cargo left or transport out of move points.

src/dat/StrBuild.java
src/dat/Tech.java
fix #57

src/galaxyreader/Planet.java
Add neighbours link array, like Hexes have neighbours but for between
endpoints of JumpGates.

src/galaxyreader/Structure.java
Add short task_force. Iff this structure is the target of a task force
then (task_force >> faction_id) & 0x1 == 1. That is task_force is a set
of bit flags for which faction has a task force