@@ -36,9 +36,12 @@ import game.Hex;
 import game.PlanetGrid;
 import java.awt.Point;
 import java.io.Serializable;
+import java.util.ArrayList;
+import java.util.Iterator;
 import java.util.LinkedHashSet;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Set;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import util.C;
@@ -55,82 +58,271 @@ public abstract class AI implements Serializable {
 
     private static final Logger logger = LogManager.getLogger(AI.class);
     private static final long serialVersionUID = 1L;
+    private static final int TASK_FORCE_INIT_COUNT = 32;
+
+    static boolean haveGroundTroop(List<Unit> stack) {
+        for (Unit u : stack) {
+            if (isGroundTroop(u)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    static boolean isGroundTroop(Unit u) {
+        if (u.type_data.non_combat == 0 && (u.move_type == C.MoveType.FOOT || u.move_type == C.MoveType.HOVER || u.move_type == C.MoveType.TREAD || u.move_type == C.MoveType.WHEEL) && (u.type_data.close_str > 0 || u.type_data.direct_str > 0 || u.type_data.indirect_str > 0 || u.type_data.psy_str > 0)) {
+            return true;
+        }
+        return false;
+    }
+    int faction;
     Game game;
-    List<Planet> planets;   
+    List<Planet> planets;
+    List<List<Continent>> continents;
+    List<List<Continent>> oceans;
     List<Unit> all_units;
     List<Unit> units;
     List<Unit> units_land_battle;
+    List<List<Unit>> stacks_land_battle_free;
+    List<TaskForce> task_forces;
+    List<Unit> units_space_battle;
+    Set<Unit> units_space_trasport;
     List<Unit> units_recon;
+    List<Unit> units_engineer;
 
     List<Unit> enemy_units;
-    List<Structure> all_structures;    
+    List<Structure> all_structures;
     List<Structure> structures;
     List<Structure> enemy_structures;
+    Set<Structure> free_enemy_structures;
     GalaxyGrid galaxy_grid;
 
-    public AI(Game game) {
+    public AI(Game game, int faction) {
         logger.debug("Hey");
         Util.dP("##### AI init begin");
         this.game = game;
+        this.faction = faction;
         all_units = game.getUnits();
         planets = game.getPlanets();
         all_structures = game.getStructures();
         galaxy_grid = game.getGalaxyMap();
         units = new LinkedList<>();
         units_land_battle = new LinkedList<>();
+        stacks_land_battle_free = new LinkedList<>();
+        task_forces = new ArrayList<>(TASK_FORCE_INIT_COUNT);
+        units_space_battle = new LinkedList<>();
+        units_space_trasport = new LinkedHashSet<>();
         units_recon = new LinkedList<>();
+        units_engineer = new LinkedList<>();
         structures = new LinkedList<>();
         enemy_units = new LinkedList<>();
         enemy_structures = new LinkedList<>();
+        free_enemy_structures = new LinkedHashSet<>();
+        continents = new ArrayList<>(planets.size());
+        logger.debug(" continents " + continents.size());
+        for (int i = 0; i < planets.size(); i++) {
+            int size = planets.get(i).planet_grid.getContinentMaps().size();
+            if (size > 1) { // handle ocean "continent"
+                size--;
 
+            }
+            ArrayList<Continent> tmp = new ArrayList<>(size);
+            for (int j = 0; j < size; j++) {
+                tmp.add(new Continent());
+            }
+            continents.add(tmp);
+            logger.debug(" continents " + planets.get(i).name + " " + i + "," + tmp.size());
+        }
+        TaskForce.init(game);
         Util.dP("##### AI init end");
     }
+    
 
+    /**
+     *
+     */
     public abstract void doTurn();
 
-    protected void logSuper(int faction) {
-        logger.debug(Util.getFactionName(faction));
+    protected void logSuper(int faction, String msg) {
+        logger.debug("******** " + Util.getFactionName(faction) + " " + msg + " ********\n");
     }
 
+    /**
+     * To help alleviate galactic traffic jams, a task force that fails to fully
+     * execute orders will be re-queued once.
+     */
+    protected void moveTaskForces() {
+        List<TaskForce> finished = new LinkedList<>();
+        LinkedList<TaskForce> pending = new LinkedList<>();
+        pending.addAll(task_forces);
+        while (!pending.isEmpty()){
+            TaskForce tf = pending.pollFirst();
+            if (!tf.executePlan()) {
+                pending.addLast(tf);
+            } else if (tf.target_hex == null) {
+                finished.add(tf);
+            }
+        }
+        task_forces.removeAll(finished);
+        String s_task = "";
+        for (TaskForce task_force : task_forces) {
+            s_task += task_force.tf_id + " ";
+        }
+        logger.debug("  task forces left: " + s_task);
+    }
+
+    private enum Task_Loop {
+
+        AAA,
+        ABB,
+        ABC;
+    }
+
+    /**
+     * Create task forces of units for specific missions. At this stage we are
+     * mainly interested with transporting ground forces between continents and
+     * planets to attack enemy assets.
+     */
+    protected void createTaskForces() {
+        /*
+         priority ordering: T(ransport)C(argo)H(ex) on planets: aaa, abb, bba, abc
+         */
+        Task_Loop state = Task_Loop.AAA;
+        next_triplet:
+        while (!stacks_land_battle_free.isEmpty() && !free_enemy_structures.isEmpty() && !units_space_trasport.isEmpty()) { 
+            for (Iterator<List<Unit>> c_it = stacks_land_battle_free.iterator(); c_it.hasNext();) {
+                List<Unit> stack = c_it.next();
+                for (Iterator<Structure> h_it = free_enemy_structures.iterator(); h_it.hasNext();) {
+                    Structure target = h_it.next();
+                    for (Iterator<Unit> t_it = units_space_trasport.iterator(); t_it.hasNext();) {
+                        Unit transport = t_it.next();
+                        switch (state) {
+                            case AAA:
+                                if (stack.get(0).p_idx == target.p_idx && target.p_idx == transport.p_idx) {
+                                    updateCollections(c_it, h_it, t_it);
+                                    createTaskForce(target, stack, transport);
+                                    continue next_triplet;
+                                }
+                                break;
+                            case ABB:
+                                if (stack.get(0).p_idx == target.p_idx) {
+                                    updateCollections(c_it, h_it, t_it);
+                                    createTaskForce(target, stack, transport);
+                                    continue next_triplet;
+                                }
+                                break;
+                            case ABC:
+                                updateCollections(c_it, h_it, t_it);
+                                createTaskForce(target, stack, transport);
+                                continue next_triplet;
+                            default:
+                                throw new AssertionError();
+                        }
+
+                    }
+                }
+            }
+            switch (state) {
+                case AAA:
+                    state = Task_Loop.ABB;
+                    break;
+                case ABB:
+                    state = Task_Loop.ABC;
+                    break;
+                case ABC:
+                    break;
+                default:
+                    throw new AssertionError();
+            }
+        }
+    }
+
+    private void createTaskForce(Structure target, List<Unit> stack, Unit transport) {
+        TaskForce tf = new TaskForce(game, target.p_idx, game.getHexFromPXY(target.p_idx, target.x, target.y));
+        tf.add(stack);
+        tf.addTransport(transport);
+        task_forces.add(tf);
+        tf.initPlan();
+        target.task_force |= (0x1 << faction);
+    }
+
+    private void updateCollections(Iterator<List<Unit>> c_it, Iterator<Structure> h_it, Iterator<Unit> t_it) {
+        c_it.remove();
+        h_it.remove();
+        t_it.remove();
+    }
+
+    /**
+     * Set build queues.
+     */
+    protected void buildUnits() {
+
+    }
+
+    /**
+     * Find assets (units, structures) of a faction, and their enemies.
+      * 
+     * @param faction
+     */
     protected void findAssets(int faction) {
         logger.debug("Ai.findAssets()");
         long time = System.nanoTime();
-        units.clear();
-        enemy_units.clear();
+        clear();
+        // find own units and enemy units
         for (Unit unit : all_units) {
             if (unit.owner == faction) {
                 units.add(unit);
-                if (unit.type_data.non_combat == 0 && (unit.move_type == C.MoveType.FOOT
-                        || unit.move_type == C.MoveType.WHEEL
-                        || unit.move_type == C.MoveType.TREAD
-                        || unit.move_type == C.MoveType.HOVER)) {
-                    units_land_battle.add(unit);
-                    unit.selected = true;
-                } else if (unit.move_type == C.MoveType.AIR) {
-                    units_recon.add(unit);
-                }
+                addToContinents(unit);
+                unit.selected = false;
             } else if (unit.spotted[faction]) {
                 enemy_units.add(unit);
+                addToContinents(unit);
             }
         }
+        // sort
         units.sort(Comp.unit_xy);
         units.sort(Comp.unit_cidx);
         units.sort(Comp.unit_pidx);
         enemy_units.sort(Comp.unit_xy);
         enemy_units.sort(Comp.unit_cidx);
         enemy_units.sort(Comp.unit_pidx);
-        structures.clear();
-        enemy_structures.clear();
+        // group units
+        for (Unit unit : units) {
+            if (unit.task_force > 0) {
+            } else if (unit.type == C.NESTER_UNIT_TYPE) {
+                units_engineer.add(unit);
+            } else if (unit.type_data.non_combat == 0 && (unit.move_type == C.MoveType.FOOT
+                    || unit.move_type == C.MoveType.WHEEL
+                    || unit.move_type == C.MoveType.TREAD
+                    || unit.move_type == C.MoveType.HOVER)) {
+                units_land_battle.add(unit);
+                unit.selected = true;
+            } else if (unit.move_type == C.MoveType.AIR) {
+                units_recon.add(unit);
+            } else if (unit.move_type == C.MoveType.JUMP || unit.move_type == C.MoveType.LANDER) {
+                if (unit.type_data.cargo > 0) {
+                    units_space_trasport.add(unit);
+                } else {
+                    units_space_battle.add(unit);
+                }
+            }
+        }
+
         for (Structure s : all_structures) {
             if (s.type == C.MONASTERY || s.type == C.ALIEN_RUINS || s.type == C.RUINS) {
                 continue;
             }
             if (s.owner == faction) {
                 structures.add(s);
+                addToContinents(s);
             } else {
-                Hex hex = game.getHexFromPXY(s.p_idx, s.x, s.y);
-                if (hex.isSpotted(faction)) {
+//                Hex hex = game.getHexFromPXY(s.p_idx, s.x, s.y);
+//                if (hex.isSpotted(faction)) {
+//                    enemy_structures.add(s);
+//                }
+                if (planets.get(s.p_idx).spotted[faction]) {
                     enemy_structures.add(s);
+                    addToContinents(s);
                 }
             }
         }
@@ -140,8 +332,53 @@ public abstract class AI implements Serializable {
         enemy_structures.sort(Comp.city_xy);
         enemy_structures.sort(Comp.city_cidx);
         enemy_structures.sort(Comp.city_pidx);
-        
+
+        for (Structure s : enemy_structures) {
+            // if on continent with no friendly force in place or en-route
+            logger.debug("  flags : " + s.task_force);
+            if (((s.task_force >> faction) & 0x1) == 0 && continents.get(s.p_idx).get(game.getHexFromPXY(s.p_idx, s.x, s.y).getLandNr()).getAssetCount(faction).ground_combat == 0) {
+                free_enemy_structures.add(s);
+                logger.debug("  free enemy city : " + game.getPlanet(s.p_idx).name + " " + s.x + "," + s.y);
+            }
+        }
+
         logger.debug("Ai.findAssets() end " + (System.nanoTime() - time) / 1_000_000d + "ms");
+    }
+
+    private void addToContinents(Structure s) {
+        int land_nr = game.getHexFromPXY(s.p_idx, s.x, s.y).getLandNr();
+        if (land_nr > -1) {
+            continents.get(s.p_idx).get(land_nr).add(s);
+        }
+    }
+
+    private void addToContinents(Unit unit) {
+        if (unit.in_space) {
+            return;
+        }
+        int land_nr = game.getHexFromPXY(unit.p_idx, unit.x, unit.y).getLandNr();
+        if (land_nr > -1) {
+            continents.get(unit.p_idx).get(land_nr).add(unit);
+        }
+    }
+
+    private void clear() {
+        units.clear();
+        units_engineer.clear();
+        units_land_battle.clear();
+        units_recon.clear();
+        units_space_battle.clear();
+        units_space_trasport.clear();
+        stacks_land_battle_free.clear();
+        enemy_units.clear();
+        structures.clear();
+        enemy_structures.clear();
+        free_enemy_structures.clear();
+        for (List<Continent> c : continents) {
+            for (Continent c1 : c) {
+                c1.clear();
+            }
+        }
     }
 
     /**
@@ -149,17 +386,18 @@ public abstract class AI implements Serializable {
      *
      * @param faction
      */
-    protected void conquerAllUnits(int faction) {
-        LinkedHashSet<LinkedList<Unit>> current_continent = new LinkedHashSet<>(C.PLANET_MAP_WIDTH * C.PLANET_MAP_COLUMNS);
-        LinkedList<Unit> current_units = new LinkedList<>();
-        current_continent.add(current_units);
+    protected void conquerGalaxy(int faction) throws AIException {
+        LinkedHashSet<List<Unit>> current_continent = new LinkedHashSet<>(C.PLANET_MAP_WIDTH * C.PLANET_MAP_COLUMNS);
+        List<Unit> current_units = new LinkedList<>();      
         Hex[][] map = null;
+        Point coord = new Point(-1, -1);
         int p_idx = -1;
         int c_idx = Integer.MIN_VALUE;
         for (Unit unit : units_land_battle) {
             if (p_idx != unit.p_idx) {
                 if (p_idx != -1) {
                     logger.debug(" call Ai.conquerContinent()");
+                    current_continent.add(current_units);
                     conquerContinent(p_idx, c_idx, current_continent, map);
                 }
                 p_idx = unit.p_idx;
@@ -167,66 +405,105 @@ public abstract class AI implements Serializable {
                 c_idx = map[unit.x][unit.y].getLandNr();
                 current_continent.clear();
                 current_units = new LinkedList<>();
-                current_continent.add(current_units);
             } else if (c_idx != map[unit.x][unit.y].getLandNr()) {
+                current_continent.add(current_units);
                 conquerContinent(p_idx, c_idx, current_continent, map);
                 c_idx = map[unit.x][unit.y].getLandNr();
                 current_continent.clear();
-                current_units = new LinkedList<>();
+                current_units = new LinkedList<>();                
+            } else if (coord.x != -1 && (coord.x != unit.x || coord.y != unit.y)) {
                 current_continent.add(current_units);
+                current_units = new LinkedList<>();               
             }
+            coord.x = unit.x;
+            coord.y = unit.y;
             current_units.add(unit);
         }
         if (p_idx != -1) {
+            current_continent.add(current_units);
             conquerContinent(p_idx, c_idx, current_continent, map);
         }
     }
 
     /**
      * Mid level conquer method, handles conquests on one continent.
+     *
      * @param p_idx
      * @param c_idx
      * @param stacks
      * @param map
      */
-    protected void conquerContinent(int p_idx, int c_idx, LinkedHashSet<LinkedList<Unit>> stacks, Hex[][] map) {
-        logger.debug("Ai.conquerContinent() " + p_idx + "," + c_idx);
+    protected void conquerContinent(int p_idx, int c_idx, LinkedHashSet<List<Unit>> stacks, Hex[][] map) throws AIException {
+        logger.debug("Ai.conquerContinent() " + planets.get(p_idx).name + "," + c_idx);
+        for (List<Unit> stack : stacks) {
+            logger.debug("  stacks (" + stacks.size() + ") on continent: " + stack.hashCode() + " " + stack.size() + " " + stack.get(0).x + "," + stack.get(0).y + " " + stack);
+        }
         game.setSelectedFaction(-1, -1);
         long time = System.nanoTime();
         PlanetGrid pg = game.getPlanetGrid(p_idx);
         LinkedHashSet<Hex> targets = getTargets(p_idx, c_idx, map);
         while (!targets.isEmpty() && !stacks.isEmpty()) {
             Hex h = null;
-            LinkedList<Unit> s = null;
+            List<Unit> s = null;
             int dist = Integer.MAX_VALUE;
             for (Hex target : targets) {
-                for (LinkedList<Unit> stack : stacks) {
-                    int tmp = pg.getIntraContHexDist(target, map[stack.getFirst().x][stack.getFirst().y]);                  
+                for (List<Unit> stack : stacks) {
+                    int tmp = pg.getIntraContHexDist(target, map[stack.get(0).x][stack.get(0).y]);
                     if (tmp == Byte.MIN_VALUE) { // for pathological continents
                         tmp = Integer.MAX_VALUE;
                     }
                     if (tmp < dist) {
                         h = target;
                         s = stack;
+//                        if (s.equals(stack)) {
+//                            System.exit(0);
+//                        }
                         dist = tmp;
                     }
-                    logger.debug("     dist " + dist + " stack " + stack.getFirst().x + "," + stack.getFirst().y + " target " + target.getX() + "," + target.getY());
+                    logger.debug("     dist " + dist + " stack " + stack.get(0).x + "," + stack.get(0).y + " target " + target.getX() + "," + target.getY());
                 }
             }
-            targets.remove(h);
-            stacks.remove(s);
-
-            LinkedList<Hex> path = PathFind.findPath(game, pg, h, map[s.getFirst().x][s.getFirst().y]);
-            game.setPath(path);
+            if (!targets.remove(h)) {
+                throw new AIException(h.toString());
+            }
+            if (!stacks.remove(s)) {
+                throw new AIException("" + s.hashCode());
+            }
+            selectLandUnits(s, true);
             game.setCurrentPlanetNr(p_idx);
-            game.setSelectedPoint(new Point(s.getFirst().x, s.getFirst().y), -1);
-            while (game.getPath().size() > 1 && Util.moveCapable(game) && moveToNextHex(path, s)) {
-                game.setSelectedPoint(new Point(s.getFirst().x, s.getFirst().y), -1);
+            game.setSelectedPoint(new Point(s.get(0).x, s.get(0).y), -1);
+            LinkedList<Hex> path = PathFind.findPath(game, pg, h, map[s.get(0).x][s.get(0).y]);
+            game.setPath(path);
+            while (game.getPath().size() > 1 && Util.moveCapable(game)) {
+                moveToNextHex(path, s); // for symbiots we just steamroll
+                game.setSelectedPoint(new Point(s.get(0).x, s.get(0).y), -1);
                 logger.debug("     path " + game.getPath().size());
             }
+            // TODO if path.size() == 1 try to capture any routed enemies
+            selectLandUnits(game.getSelectedStack(), false);
 
         }
+        // collect idle ground forces
+        for (List<Unit> stack : stacks) {
+            String tmp = "";
+            for (Unit u : stack) {
+                tmp += u.type_data.abbrev + " ";
+            }
+            logger.debug("  idle stack: " + stack.size() + " " + stack.get(0).x + "," + stack.get(0).y + " " + tmp + stack);
+            stacks_land_battle_free.add(stack);
+        }
         logger.debug("Ai.conquerContinent() end " + (System.nanoTime() - time) / 1_000_000d + "ms");
+    }
+
+    private void selectLandUnits(List<Unit> s, boolean selected) {
+        for (Unit u : s) {
+            if (u.type_data.non_combat == 0 && (u.move_type == C.MoveType.FOOT
+                    || u.move_type == C.MoveType.WHEEL
+                    || u.move_type == C.MoveType.TREAD
+                    || u.move_type == C.MoveType.HOVER)) {
+                u.selected = selected;
+            }
+        }
     }
 
     /**
@@ -379,7 +656,7 @@ public abstract class AI implements Serializable {
 //        gui.getStack_move_timer().stop();
 //        gui.setStack_moving(false);
 //    }
-        /**
+    /**
      * Find all hexes with enemy assets (units, structures) on planet p_idx,
      * continent c_idx.
      *
@@ -428,48 +705,37 @@ public abstract class AI implements Serializable {
      * Recon planet
      *
      * @param units
+     * @param p_idx
      */
     protected void reconPlanet(LinkedList<Unit> units, int p_idx) {
         PlanetGrid pg = game.getPlanetGrid(p_idx);
         LinkedList<Hex> unexplored = new LinkedList();
+        /*
+         Is there need for the Symbiots to explicitly recon ? All cities are
+         visible from
+         orbit, and all cities are allways targets for the Symbiots. If any
+         non-symbiot units are spotted while going for the cities they will be
+         included as targets.
 
+         Air units triangular patrol from/around cities:
+         1 turn::go move/3 in some direction, then
+         turn left (or right) twice, move/3, then turn twice to same direction as
+         previously, move/3 and you are back in the starting city.
+         1 turn example:: go north for move/3, go southwest for move/3, go southeast for
+         move/3 and you are back in the city
+         2 turn:: same as above but use 2*move/3
+         */
     }
 
-//        LinkedList<LinkedList<LinkedList<LinkedList<Unit>>>> known_planets = new LinkedList<>();
-//        LinkedList<LinkedList<LinkedList<Unit>>> current_planet = new LinkedList<>();
-//        known_planets.add(current_planet);
-//        LinkedList<LinkedList<Unit>> current_continent = new LinkedList<>();
-//        current_planet.add(current_continent);
-//        LinkedList<Unit> current_units = new LinkedList<>();
-//        current_continent.add(current_units);
-//        PlanetGrid planet_grid = null;
-//        Unit prev = null;
-//        int prev_hex_idx = -1;
-//        for (Unit unit : units) {
-//            if (current_units.isEmpty()) {
-//                planet_grid = game.getPlanetGrid(unit.p_idx);
-//                current_units.add(unit);
-//                prev = unit;
-//                prev_hex_idx = planet_grid.getHex(unit.x, unit.y).getHexIdx();
-//            } else {
-//                if (prev.p_idx != unit.p_idx) {
-//                    planet_grid = game.getPlanetGrid(unit.p_idx);
-//                    current_planet = new LinkedList<>();
-//                    known_planets.add(current_planet);
-//                    current_continent = new LinkedList<>();
-//                    current_planet.add(current_continent);
-//                    current_units = new LinkedList<>();
-//                    current_continent.add(current_units);
-//                } else if (planet_grid.getIntraContHexDist(prev_hex_idx, planet_grid.getHex(unit.x, unit.y).getHexIdx()) != -1) {
-//                    current_continent = new LinkedList<>();
-//                    current_planet.add(current_continent);
-//                    current_units = new LinkedList<>();
-//                    current_continent.add(current_units);
-//                } else if (prev.x != unit.x || prev.y != unit.y) {
-//                    current_units = new LinkedList<>();
-//                    current_continent.add(current_units);
-//                }
-//                current_units.add(unit);
-//            }
-//        }
+    /**
+     * WIP Yes/no response to a peace offer based on firebirds offered/demanded
+     * compared to amount of damage caused.
+     *
+     * @param firebirds
+     * @return
+     */
+    protected boolean considerPeaceOffer(int firebirds) {
+        return false;
+    }
+
 }
